Редактирование темы insayne-z под более четкие стили.

--- a/themes/insayne-z/assets/css/custom.css
+++ b/themes/insayne-z/assets/css/custom.css
@@ -98,3 +98,14 @@ table td {
   color: #343a40;
   border-color: #630091;
 }
+
+/* Линейные цитаты и стихи */
+blockquote .line-block {
+  font-size: 1.1rem;
+  color: #341e3a;
+}
+
+/* Обычные цитаты */
+blockquote p {
+  font-size: 1.15rem;
+}
